# wayshot

./: Cargo.toml
libwayshot/: Cargo.toml
libwayshot/examples/waymirror-egl/: Cargo.toml
libwayshot/src/: convert.rs  dispatch.rs
wayshot/: Cargo.toml
wayshot/src/: cli.rs  utils.rs  wayshot.rs
