[package]
name = "libwayshot-xcap"
version = "0.3.3"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
image = { version = "0.25", default-features = false }
memmap2 = "0.9"
rustix = { version = "1.1", features = ["fs", "shm"] }
thiserror = "2"

wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-backend = { version = "0.3", features = ["client_system"] }

gbm = "0.18"
drm = "0.15"

gl = "0.14"
khronos-egl = { version = "6.0",features = ["static"]  }
