[package]
name = "wayshot"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/crate/wayshot/latest"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
flate2 = "1.1"
eyre = "0.6"


[dependencies]
tracing.workspace = true

libwayshot-xcap.workspace = true

clap = { version = "4.6", features = ["derive"] }
tracing-subscriber = "0.3"

image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"pnm",
	"qoi",
	"webp",
	"avif",
] }

dialoguer = { version = "0.12", features = ["fuzzy-select"] }
eyre = "0.6"
chrono = "0.4"

wl-clipboard-rs = "0.9"
rustix = { version = "1.1", features = ["process", "runtime"] }

shellexpand = "3.1"
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
libwaysip = "0.6"

[[bin]]
name = "wayshot-xcap"
path = "src/wayshot.rs"
